--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Earth!</title>
+	<title>Hello Earth!I'm god!</title>
 </head>
 <body>
 <h1>Hello Earth!I'm god!</h1>
